--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1220,6 +1220,7 @@ Responsive Style
 
   #banner_conts2 h3 {
     font-size: large;
+    padding: 10px;
   }
 
   .banner_button button {
@@ -1247,8 +1248,11 @@ Responsive Style
   }
 
   .service_conts1 {
-    margin: 100px;
-    max-width: 100%;
+    padding: 30px;
+    margin-top: 100px;
+    &:hover{
+      scale: 1;
+    }
   }
 
   .contact_section_headline h2 {
