--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1250,9 +1250,8 @@ Responsive Style
   .service_conts1 {
     padding: 30px;
     margin-top: 100px;
-    &:hover{
-      scale: 1;
-    }
+    background-color: transparent;
+    
   }
 
   .contact_section_headline h2 {
