--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1250,7 +1250,7 @@ Responsive Style
   .service_conts1 {
     padding: 30px;
     margin-top: 100px;
-    background-color: transparent;
+    background-color:white;
     
   }
 
