--- a/src/css/home.css
+++ b/src/css/home.css
@@ -63,11 +63,53 @@ body {
 }
 
 
+/* Preloader Styles */
+.preloader {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--banner-bg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid var(--hedline-color);
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Spinner Animation */
+@keyframes spin {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
 /* Content Styles */
 .content {
   display: block;
   padding: 20px;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .spinner {
+      width: 40px;
+      height: 40px;
+      border-width: 4px;
+  }
 }
 
 .toggle-container {
@@ -1339,5 +1381,14 @@ Responsive Style
     height: 40px;
     border-width: 4px;
   }
+
+.contact_info{
+  display: block;
+  color: var(--hedline-color);
+  font-weight: bold;
+}
+.contact_info1{
+  margin-top: 10px;
+}
 
 }
