--- a/src/css/mp3_converter.css
+++ b/src/css/mp3_converter.css
@@ -197,59 +197,44 @@
     background-color: white;
   }
   
+  .container1 h1{
+    color: var(--hedline-color);
+    text-shadow: 3px 3px 4px black;
+  }
 
-  .container1 {
+  
+  .container {
     max-width: 600px;
-   align-items: center;
-   margin-left: 300px;
-    background: var(--banner-bg);
-    padding: 60px;
+    margin: auto;
+    background: #fff;
+    padding: 20px;
     border-radius: 8px;
-    box-shadow: 3px 3px 4px black;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
-
-  textarea {
-    text-align: center;
-    width: 100%;
-    height: 150px;
-    margin-bottom: 20px;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: none;
-    box-shadow: 3px 3px 4px black;
-  }
-  
-  .buttons {
-    display: flex;
-    gap: 100px;
-    justify-content: space-between;
+  input[type="file"] {
+    margin: 20px 0;
   }
   
   button {
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
-    box-shadow: 3px 3px 4px black;
-    background-color: var(--hedline-color);
+    background-color: #007bff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    &:hover{
-      transition: 2s;
-      scale: 1.2;
-      background-color: var(--hover-color);
-    }
   }
   
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  #output {
+    margin-top: 20px;
+  }
 
-.container1 h1{
-  color: var(--hedline-color);
-  text-shadow: 3px 3px 4px black;
-}
-
+  
   .header_line h1{
     margin-top: 100px;
     margin-bottom: 100px;
