--- a/src/css/text_to_speech.css
+++ b/src/css/text_to_speech.css
@@ -205,7 +205,6 @@
   .container1 {
     max-width: 600px;
     margin: auto;
-    
     padding: 60px;
     border-radius: 8px;
     
@@ -389,7 +388,7 @@
     }
     
     textarea{
-      margin-top: 60px;
+      margin-top: 30px 10px 20px 20px;
       width: 300px;
      
     }
